tests/includes/invalid/mod2.jute
module mod2 {
    class Duplicate {
        int b;
    }
}
